// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Layout > matches snapshot for admin layout 1`] = `
<div>
  <div
    class="min-h-screen bg-mist text-ink flex flex-col"
  >
    <div
      data-testid="admin-header"
    >
      AdminHeader
    </div>
    <main
      class="py-5 xl:py-10 px-5 flex flex-grow flex-col"
    />
    <footer
      class="border-t border-sand/70 bg-white py-10"
    >
      <div
        class="container-page flex flex-col gap-6 md:flex-row md:items-center md:justify-between px-5 xl:px-0"
      >
        <div>
          <p
            class="text-xs uppercase tracking-[0.2em] text-slate-500"
          >
            The Builder
          </p>
          <p
            class="mt-2 max-w-xl text-sm text-slate-600"
          >
            Strategic advisory based in Indonesia. Working with organizations selectively to design resilient structures, leadership continuity, and human risk safeguards.
          </p>
        </div>
        <div
          class="flex flex-col md:flex-row md:flex-wrap gap-3 text-sm font-medium text-slate-700"
        >
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/about"
          >
            About
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/insights"
          >
            Insights
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/work-with-me"
          >
            Work With Me
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/privacy"
          >
            Privacy Policy
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/resources"
          >
            Resources
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/risk-readiness-diagnostic"
          >
            Risk Readiness Diagnostic
          </a>
        </div>
      </div>
    </footer>
  </div>
  <div
    class="pointer-events-none fixed top-4 left-1/2 z-50 -translate-x-1/2 space-y-2"
  />
</div>
`;

exports[`Layout > matches snapshot for regular layout 1`] = `
<div>
  <div
    class="min-h-screen bg-mist text-ink flex flex-col"
  >
    <div
      data-testid="header"
    >
      Header
    </div>
    <main
      class="py-5 xl:py-10 px-5 flex flex-grow flex-col"
    />
    <footer
      class="border-t border-sand/70 bg-white py-10"
    >
      <div
        class="container-page flex flex-col gap-6 md:flex-row md:items-center md:justify-between px-5 xl:px-0"
      >
        <div>
          <p
            class="text-xs uppercase tracking-[0.2em] text-slate-500"
          >
            The Builder
          </p>
          <p
            class="mt-2 max-w-xl text-sm text-slate-600"
          >
            Strategic advisory based in Indonesia. Working with organizations selectively to design resilient structures, leadership continuity, and human risk safeguards.
          </p>
        </div>
        <div
          class="flex flex-col md:flex-row md:flex-wrap gap-3 text-sm font-medium text-slate-700"
        >
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/about"
          >
            About
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/insights"
          >
            Insights
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/work-with-me"
          >
            Work With Me
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/privacy"
          >
            Privacy Policy
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/resources"
          >
            Resources
          </a>
          <a
            class="md:rounded-full md:border border-sand md:px-3 md:py-1 hover:border-ink hover:text-ink"
            data-discover="true"
            href="/risk-readiness-diagnostic"
          >
            Risk Readiness Diagnostic
          </a>
        </div>
      </div>
    </footer>
  </div>
  <div
    class="pointer-events-none fixed top-4 left-1/2 z-50 -translate-x-1/2 space-y-2"
  />
</div>
`;
